--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["**/*.ts", "types/**/*.d.ts"],
+  "include": ["./**/*.ts", "./types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
