--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
     "vuetify": "^2.6.14",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "chart.js": "^4.5.1",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
