Tasks: drag and drop

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
     "@fontsource/roboto": "^5.2.9",
     "@mdi/font": "^7.0.96",
     "axios": "^1.13.5",
-    "vue": "^2.7.7",
-    "vue-router": "^3.5.4",
-    "vuetify": "^2.6.14",
-    "vuex": "^3.6.2",
     "chart.js": "^4.5.1",
-    "vue-chartjs": "^5.3.3"
+    "vue": "^2.7.7",
+    "vue-chartjs": "^5.3.3",
+    "vue-router": "^3.5.4",
+    "vuedraggable": "^2.24.3",
+    "vuetify": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
