Redis cache: clients 5m, dashboard 3m, invalidation by user, all

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^9.1.0",
         "rate-limiter": "^0.2.0",
+        "redis": "^5.11.0",
         "swagger-ui-express": "^5.0.1",
         "yamljs": "^0.3.0"
     },
