--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^9.1.0",
+        "node-cron": "^4.2.1",
         "rate-limiter": "^0.2.0",
         "redis": "^5.11.0",
         "swagger-ui-express": "^5.0.1",
@@ -31,6 +32,7 @@
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
+        "@types/node-cron": "^3.0.11",
         "@types/supertest": "^6.0.2",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/yamljs": "^0.2.34",
