Fix: skip, limit query params validations

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "express-rate-limit": "^8.2.1",
+        "express-validator": "^7.3.1",
         "express-xss-sanitizer": "^2.0.1",
         "helmet": "^8.1.0",
         "http-status-codes": "^2.3.0",
