--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "node-cron": "^4.2.1",
         "rate-limiter": "^0.2.0",
         "redis": "^5.11.0",
+        "socket.io": "^4.8.3",
         "swagger-ui-express": "^5.0.1",
         "yamljs": "^0.3.0"
     },
