--- a/backend/package.json
+++ b/backend/package.json
@@ -35,13 +35,13 @@
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
         "@types/node-cron": "^3.0.11",
-        "@types/supertest": "^6.0.2",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/yamljs": "^0.2.34",
         "@typescript-eslint/eslint-plugin": "^8.51.0",
         "@typescript-eslint/parser": "^8.51.0",
         "cross-env": "^10.1.0",
         "eslint": "^9.39.2",
+        "jest": "^30.2.0",
         "mongodb-memory-server": "^9.1.6",
         "nodemon": "^3.1.11",
         "ts-node": "^10.9.2",
