--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - PORT=3000
       - MONGO_URI=mongodb://mongo:27017/micro-crm
       - REDIS_URL=redis://redis:6379
-      - JWT_SECRET=jwt_secret_key
-      - JWT_LIFETIME=1d
+      - JWT_SECRET=${JWT_SECRET:-default_secret_not_secret}
+      - JWT_LIFETIME=${JWT_LIFETIME:-1h}
     depends_on:
       - mongo
       - redis
@@ -24,7 +24,7 @@ services:
         - VITE_SOCKET_URL=/
     container_name: crm-frontend
     ports:
-      - "3001:3001"
+      - "${PORT:-3001}:3001"
     depends_on:
       - backend
     networks:
