--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node dist/app.js",
         "dev": "nodemon --ext ts -x \"tsc && node dist/app.js\"",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "jest"
     },
     "author": "Eskov Sergey",
     "dependencies": {
@@ -32,9 +33,11 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
         "@types/node-cron": "^3.0.11",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/yamljs": "^0.2.34",
         "@typescript-eslint/eslint-plugin": "^8.51.0",
@@ -44,6 +47,8 @@
         "jest": "^30.2.0",
         "mongodb-memory-server": "^9.1.6",
         "nodemon": "^3.1.11",
+        "supertest": "^7.2.2",
+        "ts-jest": "^29.4.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     }
